  
  * Added "update" menu item in Olive. (Mateusz Korniak)
  
  * New Olive application icon. (Simon Pascal Klein and Jakub Steiner)
  
  * Show bzr viz interface quickly. (Gary van der Merwe)

 UI
  
  * Improve Preferences dialog layout. (Jelmer)
 
 INTERNALS:
 
  * Updated pot generator script and regenerated the translation template.
    (Szilveszter)
    
 BUG FIXES
 
  * Support DBus being present but NetworkManager missing. (#126767, Mateusz
  Korniak, Jelmer)

  * Fixed interface to push.PushDialog (Mateusz Korniak)

  * Fix so the when Olive is run from the source code, the toolbar and menu
    icons show. (Gary van der Merwe, #131520)

  * Fix a regression that Olive was no longer able to find bzrlib location
    due to a change in the output of "bzr version". (Gary van der Merwe)

  * Fix a regression that Olive branch info window was not working. (Gary van
    der Merwe)
    
  * Fixed tags formatting. (Aaron)

0.18.0  2007-07-17

 FEATURES

  * Add support for customizing colors in the diff window via ~/.colordiffrc
    or gedit's syntax highlighting configuration. See README file for details.
    (Adeodato Simó)

  * Add Inspect and Branch buttons to notification window. (Robert)

  * Add notification area icon with context menu. (Jelmer)

  * New tango icons. (Pascal Klein)

  * Add simple About dialog. (Jelmer)

  * Add context menu in bzrk. (Jelmer)

 BUG FIXES

  * Fix option help strings to comply with the style guide. (Vincent)

  * Fix import of BzrError. (Aaron)

  * Fix missing attributes for DummyRevision. (Vincent)

  * Never refuse to run with newer versions of bzr, just warn. (Jelmer)


0.17.0  2007-06-15

 FEATURES

  * Added an EXPERIMENTAL feature for browsing remote branches in Olive 
    (Szilveszter)

  * Bookmarked locations are now added to branch/checkout history (Szilveszter)

  * There are now more columns in the file list, and you can sort by them
    (Szilveszter)
